--- a/core/common/softbus_property/BUILD.gn
+++ b/core/common/softbus_property/BUILD.gn
@@ -24,7 +24,11 @@ if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
     static_library("softbus_property") {
       include_dirs = common_include
-      sources = [ "src/softbus_property.c" ]
+      sources = [ 
+        "src/softbus_property.c",
+        "src/softbus_feature_config.c",
+        "src/softbus_config_adapt.c",
+      ]
       deps = [
         "$hilog_lite_deps_path",
         "$libsec_deps_path",
@@ -35,7 +39,11 @@ if (defined(ohos_lite)) {
     shared_library("softbus_property") {
       include_dirs = common_include
       cflags = [ "-Wall" ]
-      sources = [ "src/softbus_property.c" ]
+      sources = [ 
+        "src/softbus_property.c",
+        "src/softbus_feature_config.c",
+        "src/softbus_config_adapt.c",
+      ]
       public_deps = [
         "$dsoftbus_core_path/common/json_utils:json_utils",
         "$hilog_lite_deps_path",
@@ -48,7 +56,11 @@ if (defined(ohos_lite)) {
   import("//build/ohos.gni")
 
   ohos_shared_library("softbus_property") {
-    sources = [ "src/softbus_property.c" ]
+    sources = [ 
+        "src/softbus_property.c",
+        "src/softbus_feature_config.c",
+        "src/softbus_config_adapt.c",
+    ]
     include_dirs = [
       "$dsoftbus_core_path/common/include",
       "include",
