--- a/core/frame/standard/server/BUILD.gn
+++ b/core/frame/standard/server/BUILD.gn
@@ -36,6 +36,7 @@ ohos_shared_library("softbus_server") {
     "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/common/softbus_property/include",
   ]
   sources = [
     "$dsoftbus_root_path/core/frame/standard/server/src/softbus_server_death_recipient.cpp",
@@ -55,6 +56,7 @@ ohos_shared_library("softbus_server") {
     "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
     "$dsoftbus_root_path/core/frame/standard/softbusdata:softbus_server_data",
     "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
+    "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
     "//utils/native/base:utils",
   ]
   if (is_standard_system) {
