--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -31,6 +31,7 @@ if (ohos_kernel_type == "liteos_m") {
       "$dsoftbus_root_path/interfaces/kits/transport",
       "$hilog_lite_include_path",
       "$dsoftbus_root_path/core/common/softbus_property/include",
+      "$softbus_adapter_config/spec_config",
     ]
 
     sources = [
@@ -60,6 +61,7 @@ if (ohos_kernel_type == "liteos_m") {
       "//base/security/deviceauth/interfaces/innerkits",
       "//utils/native/lite/include",
       "$hilog_lite_include_path",
+      "$softbus_adapter_config/spec_config",
     ]
 
     sources = [
