--- a/core/frame/standard/server/BUILD.gn
+++ b/core/frame/standard/server/BUILD.gn
@@ -37,6 +37,7 @@ ohos_shared_library("softbus_server") {
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/authentication/interface",
     "$dsoftbus_root_path/core/common/softbus_property/include",
+    "$softbus_adapter_config/spec_config",
   ]
   sources = [
     "$dsoftbus_root_path/core/frame/standard/server/src/softbus_server_death_recipient.cpp",
