--- a/sdk/frame/BUILD.gn
+++ b/sdk/frame/BUILD.gn
@@ -36,6 +36,8 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
         "$dsoftbus_root_path/core/transmission/pending_packet/include",
         "$hilog_lite_include_path",
+        "$softbus_adapter_config/spec_config",
+        "$dsoftbus_root_path/core/common/softbus_property/include",
       ]
       sources = [
         "$dsoftbus_root_path/core/common/inner_communication/c/softbus_client_interface_impl.c",
@@ -57,6 +59,8 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common/inner_communication",
         "//third_party/bounds_checking_function/include",
         "$hilog_lite_include_path",
+        "$softbus_adapter_config/spec_config",
+        "$dsoftbus_root_path/core/common/softbus_property/include",
       ]
 
       sources = [
@@ -82,6 +86,7 @@ if (defined(ohos_lite)) {
         "//foundation/communication/ipc_lite:liteipc_adapter",
         "//foundation/distributedschedule/samgr_lite/samgr:samgr",
         "//third_party/bounds_checking_function:libsec_shared",
+        "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
       ]
     }
   }
@@ -100,6 +105,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/sdk/transmission/session/include",
       "$dsoftbus_root_path/sdk/bus_center/manager/include",
       "$dsoftbus_root_path/core/frame/standard/client/include",
+      "$softbus_adapter_config/spec_config",
+      "$dsoftbus_root_path/core/common/softbus_property/include",
     ]
 
     sources = [
@@ -120,6 +127,7 @@ if (defined(ohos_lite)) {
       ]
       deps = [
         "$dsoftbus_root_path/core/common/utils:softbus_utils",
+        "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
         "$dsoftbus_root_path/sdk/bus_center:dsoftbus_bus_center_manager_sdk",
         "$dsoftbus_root_path/sdk/discovery:dsoftbus_disc_manager_sdk",
         "$dsoftbus_root_path/sdk/transmission:dsoftbus_trans_session_manager_sdk",
