--- a/sdk/transmission/BUILD.gn
+++ b/sdk/transmission/BUILD.gn
@@ -80,7 +80,7 @@ if (defined(ohos_lite)) {
     include_dirs = common_include
     sources = common_src
     public_configs = [ ":trans_session_manager_sdk_interface" ]
-    deps = [
+    public_deps = [
       "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
