--- a/sdk/transmission/trans_channel/udp/BUILD.gn
+++ b/sdk/transmission/trans_channel/udp/BUILD.gn
@@ -21,6 +21,9 @@ if (enable_trans_udp == true) {
   common_src = [
     "common/src/client_trans_udp_manager.c",
     "stream/src/client_trans_stream.c",
+    "file/src/client_trans_file_listener.c",
+    "file/src/client_trans_file.c",
+    "file/src/file_adapter.c",
   ]
 } else {
   common_src = [ "common/src/client_trans_udp_virtual.c" ]
@@ -60,6 +63,11 @@ if (defined(ohos_lite)) {
         "$dsoftbus_core_path/common/include",
         "$dsoftbus_root_path/sdk/transmission/session/include",
         "stream/include",
+        "file/include",
+        "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile/interface",
+        "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_util/interface",
+        "//third_party/bounds_checking_function/include",
+        "$dsoftbus_root_path/core/connection/interface",
       ]
       cflags = [
         "-Wall",
@@ -72,8 +80,12 @@ if (defined(ohos_lite)) {
         deps = [
           "stream/adaptor:dsoftbus_trans_dstream",
           "//third_party/bounds_checking_function:libsec_shared",
+          "$dsoftbus_root_path/core/connection/common:conn_common",
         ]
         deps += common_deps
+        public_deps = [
+          "$dsoftbus_root_path/components/nstackx_enhanced:nstackx",
+        ]
       }
     }
   }
@@ -87,6 +99,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/sdk/transmission/session/include",
       "$dsoftbus_root_path/sdk/transmission/trans_channel/udp/stream/include",
       "$dsoftbus_root_path/core/adapter/kernel/include",
+      "file/include",
+      "$dsoftbus_root_path/core/connection/interface",
     ]
     sources = common_src
     public_configs = [ ":trans_udp_channel_sdk_interface" ]
