--- a/core/authentication/BUILD.gn
+++ b/core/authentication/BUILD.gn
@@ -28,6 +28,10 @@ common_src = [
   "src/auth_socket.c",
 ]
 
+if (enable_auth_account == true) {
+  defines = [ "AUTH_ACCOUNT" ]
+}
+
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
 
@@ -37,6 +41,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/adapter/kernel/include",
       "$dsoftbus_root_path/core/bus_center/interface",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+      "$dsoftbus_root_path/core/bus_center/utils/include",
       "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/core/common/message_handler/include",
       "$dsoftbus_root_path/core/connection/manager",
@@ -56,11 +61,13 @@ if (defined(ohos_lite)) {
     deps = [
       "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
+      "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
       "$dsoftbus_root_path/core/common/json_utils:json_utils",
       "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$dsoftbus_root_path/core/connection/tcp:tcp_connection",
       "$hilog_lite_deps_path",
+      "//base/security/deviceauth/services:deviceauth_sdk",
       "//third_party/bounds_checking_function:libsec_shared",
     ]
   }
@@ -73,6 +80,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/adapter/kernel/include",
       "$dsoftbus_root_path/core/bus_center/interface",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+      "$dsoftbus_root_path/core/bus_center/utils/include",
       "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/core/common/message_handler/include",
       "$dsoftbus_root_path/core/connection/manager",
@@ -86,6 +94,7 @@ if (defined(ohos_lite)) {
     deps = [
       "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
+      "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
       "$dsoftbus_root_path/core/common/json_utils:json_utils",
       "$dsoftbus_root_path/core/common/message_handler",
       "$dsoftbus_root_path/core/common/security:softbus_crypto",
