--- a/core/bus_center/lnn/net_buscenter/BUILD.gn
+++ b/core/bus_center/lnn/net_buscenter/BUILD.gn
@@ -56,6 +56,8 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/connection:softbus_connection",
         "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
         "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
+        "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
+        "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
         "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
         "//build/lite/config/component/cJSON:cjson_shared",
         "$hilog_lite_deps_path",
@@ -88,6 +90,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/connection:softbus_connection",
       "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
       "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
+      "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
+      "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
       "//utils/native/base:utilsecurec_shared",
     ]
