modify config_get interface,and other minor modifications
Signed-off-by: zhufenghao <2581725389@qq.com>

--- a/tests/core/connection/tcp/BUILD.gn
+++ b/tests/core/connection/tcp/BUILD.gn
@@ -27,6 +27,7 @@ ohos_unittest("softbus_tcp_manager_test") {
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/core/connection/manager",
     "$dsoftbus_root_path/core/connection/tcp/include",
+    "$dsoftbus_root_path/core/common/softbus_property/include",
     "//third_party/googletest/googletest/include",
     "//third_party/googletest/googletest/src",
     "//third_party/bounds_checking_function/include",
@@ -34,6 +35,7 @@ ohos_unittest("softbus_tcp_manager_test") {
   sources = [ "tcp_manager_test.cpp" ]
   deps = [
     "$dsoftbus_root_path/core/frame/standard/server:softbus_server",
+    "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
   ]
