--- a/core/authentication/BUILD.gn
+++ b/core/authentication/BUILD.gn
@@ -43,6 +43,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/connection/interface",
       "$dsoftbus_root_path/interfaces/kits/bus_center",
       "$dsoftbus_root_path/interfaces/kits/common",
+      "$dsoftbus_root_path/core/common/softbus_property/include",
+      "$softbus_adapter_config/spec_config",
       "$hilog_lite_include_path",
       "//base/security/deviceauth/interfaces/innerkits",
       "//third_party/bounds_checking_function/include",
@@ -58,6 +60,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
       "$dsoftbus_root_path/core/common/json_utils:json_utils",
       "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
+      "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$dsoftbus_root_path/core/connection/tcp:tcp_connection",
       "$hilog_lite_deps_path",
@@ -79,6 +82,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/connection/interface",
       "$dsoftbus_root_path/interfaces/kits/bus_center",
       "$dsoftbus_root_path/interfaces/kits/common",
+      "$dsoftbus_root_path/core/common/softbus_property/include",
+      "$softbus_adapter_config/spec_config",
       "//base/security/deviceauth/interfaces/innerkits",
       "//third_party/cJSON",
     ]
@@ -90,6 +95,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/common/message_handler",
       "$dsoftbus_root_path/core/common/security:softbus_crypto",
       "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
+      "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$dsoftbus_root_path/core/connection/common:conn_common",
       "$dsoftbus_root_path/core/connection/manager:conn_manager",
