--- a/core/bus_center/BUILD.gn
+++ b/core/bus_center/BUILD.gn
@@ -21,6 +21,8 @@ config("bus_center_server_interface") {
     "$dsoftbus_root_path/interfaces/kits",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/core/common/softbus_property/include",
+    "$softbus_adapter_config/spec_config",
   ]
 }
 if (defined(ohos_lite)) {
@@ -61,6 +63,8 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/include",
         "$dsoftbus_root_path/interfaces/kits/discovery",
         "$dsoftbus_root_path/core/discovery/interface",
+        "$dsoftbus_root_path/core/common/softbus_property/include",
+        "$softbus_adapter_config/spec_config",
         "//third_party/bounds_checking_function/include",
         "$hilog_lite_include_path",
       ]
@@ -84,6 +88,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
         "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
         "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
+        "$dsoftbus_root_path/adapter:softbus_adapter",
         "$hilog_lite_deps_path",
         "lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
         "lnn/net_ledger:dsoftbus_bus_center_ledger",
@@ -133,6 +138,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/discovery/interface",
       "$dsoftbus_root_path/core/frame/standard/client/include",
       "$dsoftbus_root_path/core/frame/standard/softbusdata/include",
+      "$dsoftbus_root_path/core/common/softbus_property/include",
+      "$softbus_adapter_config/spec_config",
       "//utils/system/safwk/native/include",
     ]
 
@@ -156,6 +163,7 @@ if (defined(ohos_lite)) {
       "monitor:dsoftbus_bus_center_monitor",
       "utils:dsoftbus_bus_center_utils",
       "//utils/native/base:utils",
+      "$dsoftbus_root_path/adapter:softbus_adapter",
     ]
     if (is_standard_system) {
       external_deps = [
