--- a/core/bus_center/lnn/net_ledger/BUILD.gn
+++ b/core/bus_center/lnn/net_ledger/BUILD.gn
@@ -19,6 +19,8 @@ config("bus_center_ledger_interface") {
     "$dsoftbus_root_path/interfaces/kits",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/core/common/softbus_property/include",
+    "$softbus_adapter_config/spec_config",
   ]
 }
 
@@ -45,6 +47,8 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/adapter/bus_center/include",
         "$dsoftbus_root_path/core/common/include",
         "$dsoftbus_root_path/core/adapter/kernel/include",
+        "$dsoftbus_root_path/core/common/softbus_property/include",
+        "$softbus_adapter_config/spec_config",
         "//third_party/bounds_checking_function/include",
         "$hilog_lite_include_path",
       ]
@@ -64,6 +68,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common/utils:softbus_utils",
         "$hilog_lite_deps_path",
         "//third_party/bounds_checking_function:libsec_shared",
+        "$dsoftbus_root_path/adapter:softbus_adapter",
       ]
     }
   }
@@ -89,6 +94,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/adapter/bus_center/include",
       "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/core/adapter/kernel/include",
+      "$dsoftbus_root_path/core/common/softbus_property/include",
+      "$softbus_adapter_config/spec_config",
     ]
     public_configs = [ ":bus_center_ledger_interface" ]
     deps = [
@@ -97,6 +104,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/common/json_utils:json_utils",
       "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
+      "$dsoftbus_root_path/adapter:softbus_adapter",
       "//utils/native/base:utils",
     ]
     if (is_standard_system) {
