--- a/core/connection/br/BUILD.gn
+++ b/core/connection/br/BUILD.gn
@@ -18,7 +18,11 @@ if (enable_connection_br == false) {
   deps_br = []
 } else {
   sources_br = [ "src/br_connection.c" ]
-  deps_br = [ "$dsoftbus_root_path/core/adapter/br/mock:br_adapter" ]
+  deps_br = [ 
+    "$dsoftbus_root_path/core/adapter/br/mock:br_adapter",
+    "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+  ]
 }
 
 if (defined(ohos_lite)) {
@@ -38,6 +42,8 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common/message_handler/include",
         "$dsoftbus_root_path/core/connection/manager",
         "$dsoftbus_root_path/core/connection/interface",
+        "$dsoftbus_root_path/core/common/softbus_property/include",
+        "$softbus_adapter_config/spec_config",
         "//third_party/cJSON",
       ]
       deps = deps_br
@@ -56,6 +62,8 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common/message_handler/include",
         "$dsoftbus_root_path/core/connection/manager",
         "$dsoftbus_root_path/core/connection/interface",
+        "$dsoftbus_root_path/core/common/softbus_property/include",
+        "$softbus_adapter_config/spec_config",
         "//third_party/cJSON",
       ]
       deps = deps_br
@@ -77,6 +85,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/common/message_handler/include",
       "$dsoftbus_root_path/core/connection/manager",
       "$dsoftbus_root_path/core/connection/interface",
+      "$dsoftbus_root_path/core/common/softbus_property/include",
+      "$softbus_adapter_config/spec_config",
       "//third_party/cJSON",
     ]
     deps = deps_br
