--- a/core/connection/tcp/BUILD.gn
+++ b/core/connection/tcp/BUILD.gn
@@ -31,12 +31,16 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/connection/interface",
         "$dsoftbus_root_path/core/connection/manager",
         "$dsoftbus_root_path/interfaces/kits/common",
+        "$dsoftbus_root_path/core/common/softbus_property/include",
+        "$softbus_adapter_config/spec_config",
         "//third_party/bounds_checking_function/include",
         "$hilog_lite_include_path",
       ]
       deps = [
         "$dsoftbus_root_path/core/connection/common:conn_common",
         "$hilog_lite_deps_path",
+        "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
+        "$dsoftbus_root_path/adapter:softbus_adapter",
       ]
     }
   } else {
@@ -54,6 +58,8 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/connection/interface",
         "$dsoftbus_root_path/core/connection/manager",
         "$dsoftbus_root_path/interfaces/kits/common",
+        "$dsoftbus_root_path/core/common/softbus_property/include",
+        "$softbus_adapter_config/spec_config",
         "//third_party/bounds_checking_function/include",
         "$hilog_lite_include_path",
       ]
@@ -63,6 +69,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/connection/common:conn_common",
         "$hilog_lite_deps_path",
         "$libsec_deps_path",
+        "$dsoftbus_root_path/adapter:softbus_adapter",
       ]
     }
   }
@@ -83,11 +90,14 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/connection/interface",
       "$dsoftbus_root_path/core/connection/manager",
       "$dsoftbus_root_path/interfaces/kits/common",
+      "$dsoftbus_root_path/core/common/softbus_property/include",
+      "$softbus_adapter_config/spec_config",
     ]
     deps = [
       "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$dsoftbus_root_path/core/connection/common:conn_common",
+      "$dsoftbus_root_path/adapter:softbus_adapter",
     ]
     if (is_standard_system) {
       external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
