--- a/sdk/bus_center/BUILD.gn
+++ b/sdk/bus_center/BUILD.gn
@@ -19,6 +19,8 @@ config("bus_center_client_interface") {
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/interfaces/kits",
+    "$dsoftbus_root_path/core/common/softbus_property/include",
+    "$softbus_adapter_config/spec_config",
   ]
 }
 
@@ -33,6 +35,8 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common/include",
         "$dsoftbus_root_path/core/common/inner_communication",
         "$dsoftbus_root_path/core/bus_center/interface",
+        "$dsoftbus_root_path/core/common/softbus_property/include",
+        "$softbus_adapter_config/spec_config",
         "//third_party/bounds_checking_function/include",
         "$hilog_lite_include_path",
       ]
@@ -46,6 +50,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
         "$dsoftbus_root_path/core/common/utils:softbus_utils",
         "$hilog_lite_deps_path",
+        "$dsoftbus_root_path/adapter:softbus_adapter",
         "//foundation/communication/ipc_lite:liteipc_adapter",
         "//foundation/distributedschedule/samgr_lite/samgr:samgr",
       ]
@@ -63,6 +68,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/bus_center/interface",
       "$dsoftbus_root_path/core/frame/standard/server/include",
       "$dsoftbus_root_path/interfaces/kits/discovery",
+      "$dsoftbus_root_path/core/common/softbus_property/include",
+      "$softbus_adapter_config/spec_config",
       "//utils/system/safwk/native/include",
     ]
     sources = [
@@ -75,6 +82,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
       "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
+      "$dsoftbus_root_path/adapter:softbus_adapter",
       "//utils/native/base:utils",
     ]
     if (is_standard_system) {
